fixing text alignment project 2

--- a/css/style.css
+++ b/css/style.css
@@ -984,6 +984,7 @@
 
   #project-two-subtitle {
     max-width: 200px;
+    text-align: center;
   }
 
   .inverse-image-wrapper {
